name:                jjoekoullas-github-io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jjoedouglas/jjoekoullas-github-io#readme
license:             BSD3
license-file:        LICENSE
author:              J. Joe Douglas
maintainer:          jjoedouglas@gmail.com
copyright:           2016 J. Joe Douglas
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable jjoekoullas-github-io
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
